Expand MCP code and database workflows